--- a/public/styles/agentSide.css
+++ b/public/styles/agentSide.css
@@ -157,6 +157,7 @@ img{
 .send-message{
   width:100%;
   padding:1rem;
+  margin-bottom: 20px;
   display:flex;
   align-items:center;
   justify-content:space-between;
