--- a/public/styles/agentSide.css
+++ b/public/styles/agentSide.css
@@ -212,3 +212,45 @@ button:hover{
   background:black;
   cursor:pointer;
 }
+
+
+.text-contents {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.text-contents h5 {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.text-contents p {
+  margin: 10px 0;
+  font-size: 14px;
+}
+
+.options {
+  margin-top: 10px;
+  width: 100%;
+}
+
+.option-button {
+  background-color: #7269EF;
+  width: 100%;
+  font-size: small;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin-right: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.option-button:hover {
+  background-color: #6054d3;
+}
