--- a/views/agentside.ejs
+++ b/views/agentside.ejs
@@ -18,18 +18,20 @@
     <div class="chat-texts">
 
       <div class="text">
-        <div class="profile-pic"> <img
+        <div class="profile-pic">
+          <img
             src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-            alt=""> </div>
-            <div class="text-contents">
-              <h5>Culture support</h5>
-              <p>Hey, how can I help you?</p>
-              <div class="options">
-                  <button class="option-button" onclick="handleOption('booking')">See Booking</button>
-                  <button class="option-button" onclick="handleOption('travelerName')">See Traveler Name</button>
-                  <button class="option-button" onclick="handleOption('chat')">Chat with Us</button>
-              </div>
+            alt="">
+        </div>
+        <div class="text-contents">
+          <h5>Culture support</h5>
+          <p>Hey, how can I help you?</p>
+          <div class="options">
+            <button class="option-button" onclick="handleOption('booking')">See Booking</button>
+            <button class="option-button" onclick="handleOption('travelerName')">See Traveler Name</button>
+            <button class="option-button" onclick="handleOption('chat')">Chat with Us</button>
           </div>
+        </div>
       </div>
     </div>
 
